--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Wang Robotics Lab</title>
+<title>Smart Agriculture and Food Engineering (SAFE) Lab</title>
 <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 <header class="site-header">
 <div class="container">
-<h1 class="lab-title">Wang Robotics Lab</h1>
-<p class="lab-sub">Agricultural robotics · Poultry processing · Computer vision</p>
+<h1 class="lab-title">Smart Agriculture and Food Engineering (SAFE) Lab</h1>
+<p class="lab-sub">Agricultural robotics · AgriFood Manufacturing · Computer vision · Artificial Intelligence</p>
 <nav class="main-nav">
 <a href="index.html">Home</a>
 <a href="people.html">People</a>
 <a href="research.html">Research</a>
 <a href="publications.html">Publications</a>
-<a href="projects.html">Projects</a>
-<a href="contact.html">Contact</a>
+<a href="projects.html">Outreach</a>
+<a href="contact.html">News</a>
 </nav>
 </div>
 </header>
@@ -26,8 +26,8 @@
 <section class="hero">
 <img src="assets/images/banner.jpg" alt="Lab banner" class="hero-img">
 <div class="hero-text">
-<h2>Engineering intelligent systems for sustainable agriculture</h2>
-<p>We develop robotic solutions, perception algorithms and data-driven systems to improve food safety, animal welfare, and farm productivity.</p>
+<h2>Welcome</h2>
+<p>This is the Smart Agricultural & Food Engineering (SAFE) lab in the Biological and Agricultural Engineering Department, University of Arkansas, Fayetteville. SAFE lab’s primary research focus is developing and applying advanced artificial intelligence, robotics, and machine vision techniques for modern agrifood manufacturing to protect the quality, safety, and welfare of crops, animals, food, and workers. SAFE lab also has broad interests in applying these engineering solutions to areas related to human daily lives, including agriculture and healthcare.</p>
 </div>
 </section>
 
@@ -50,10 +50,10 @@
 
 <footer class="site-footer">
 <div class="container">
-<p>Wang Robotics Lab — University Department • City, State</p>
+<p>Smart Agriculture and Food Engineering (SAFE) Lab — University Department • City, State</p>
 <p>Contact: <a href="mailto:pi@example.edu">pi@example.edu</a></p>
 </div>
 </footer>
 </body>
 </html>
-```
+
